# async-backend

./: .gitignore  README.md  What is async.md  body.py  brain.py  database.py  organs.py  requirements.txt  seed_database.py
Knowledge_base/: capsule.md
knowledge_ingest/: README.md  __init__.py  exceptions.py  models.py  organism.py  pyproject.toml
knowledge_ingest/embedders/: openrouter.py
knowledge_ingest/loaders/: markdown.py
knowledge_ingest/splitters/: recursive.py
