[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-ingest"
version = "1.0.0"
description = "Production-ready Knowledge Ingestion SDK. Document to pgvector in one call."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Farhan Ahmed Mudgal" }]
keywords = [
  "rag",
  "knowledge-base",
  "embeddings",
  "pgvector",
  "ai",
  "ingestion",
  "llm",
  "vector-database",
  "chunking",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "langchain-text-splitters>=0.3.0",
  "google-genai>=0.3.0",
  "psycopg2-binary>=2.9.0",
  "pgvector>=0.3.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.urls]
Homepage   = "https://github.com/dragohan/knowledge-ingest"
Repository = "https://github.com/dragohan/knowledge-ingest"
"Bug Tracker" = "https://github.com/dragohan/knowledge-ingest/issues"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_ingest"]
